--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">gotaxi</string>
+    <string name="app_name">Ey Taxi!</string>
     <string name="geolocate_btn">Geolocate!</string>
 </resources>
